--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="inbox" ng-if="mcc.showInbox">
+    <div class="inbox" ng-show="mcc.showInbox">
         <div class="header_inbox">
             <p class="name_inbox">Hỗ trợ viên</p>
             <p class="icon_close" ng-click="mcc.showInbox=!mcc.showInbox">X</p>
