update view img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                                 <a href="{{msg.path+'/download'}}" ng-bind-html="mcc.downloadicon + msg.content">
                                 </a>
                             </p>
-                            <img ng-src="{{msg.paththumb}}" alt="not found" ng-if="msg.type=='img'">
+                            <img ng-src="{{msg.paththumb}}" alt="not found" ng-if="msg.type=='img'" data-toggle="modal"
+                                data-target="#viewimg" ng-click="mcc.viewimgSrc=msg.path">
                             <span class="time_date">{{msg.sendAt | date: "MM/dd/yyyy '|' h:mma"}}</span>
                         </div>
                     </div>
@@ -27,7 +28,8 @@
                             <a href="{{msg.path+'/download'}}" ng-bind-html="mcc.downloadicon + msg.content">
                             </a>
                         </p>
-                        <img ng-src="{{msg.paththumb}}" alt="not found" ng-if="msg.type=='img'">
+                        <img ng-src="{{msg.paththumb}}" alt="not found" ng-if="msg.type=='img'" data-toggle="modal"
+                                data-target="#viewimg" ng-click="mcc.viewimgSrc=msg.path">
                         <span class="time_date">{{msg.sendAt | date: "MM/dd/yyyy '|' h:mma"}}</span>
                     </div>
                 </div>
@@ -35,7 +37,8 @@
         </div>
         <div class="msg_type">
             <div class="input_msg_write">
-                <textarea type="text" class="write_msg_customer" placeholder="Gõ tin nhắn..." ng-model="mcc.msg_typing"></textarea>
+                <textarea type="text" class="write_msg_customer" placeholder="Gõ tin nhắn..."
+                    ng-model="mcc.msg_typing"></textarea>
                 <button class="msg_send_btn" type="button">
                     <span class="glyphicon glyphicon-paperclip" aria-hidden="true" ngf-select="mcc.sendImgFile($files)"
                         multiple="multiple"></span>
@@ -45,4 +48,13 @@
     </div>
     <span class="icon_open glyphicon glyphicon-comment" ng-if="!mcc.showInbox"
         ng-mouseup="mcc.showInbox=!mcc.showInbox"></span>
+</div>
+<div class="modal fade" id="viewimg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="options">
+        <a href="{{mcc.viewimgSrc+'/download'}}"><span class="glyphicon glyphicon-save option"></span></a>
+        <span class="glyphicon glyphicon-remove option" data-dismiss="modal"></span>
+    </div>
+    <div class="img">
+        <img id="viewimage" ng-src="{{mcc.viewimgSrc}}" alt="not found">
+    </div>
 </div>
