--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <div class="msg_type">
+        <div class="msg_type" ng-click="mcc.msg_type_click()">
             <div class="input_msg_write">
                 <textarea type="text" class="write_msg_customer" placeholder="Gõ tin nhắn..."
                     ng-model="mcc.msg_typing"></textarea>
